force-app/main/default/objects/Activity_Plan_Item__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Plan__c</fullName>
        <label>Activity Plan</label>
        <referenceTo>Activity_Plan__c</referenceTo>
        <relationshipLabel>Activity Plan Items</relationshipLabel>
        <relationshipName>Activity_Plan_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assign_Type__c</fullName>
        <label>Assign Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Record Owner</fullName>
                </value>
                <value>
                    <fullName>Current User</fullName>
                </value>
                <value>
                    <fullName>Specific User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activity_Plan_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Time__c</fullName>
        <inlineHelpText>Due time will be calculated from Activity Creation Time</inlineHelpText>
        <label>Due Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Type__c</fullName>
        <label>Due Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Minutes</fullName>
                </value>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due__c</fullName>
        <formula>CASE( Due_Type__c ,&apos;Hours&apos;, Due_Time__c/24, &apos;Minutes&apos;, Due_Time__c/1440,&apos;Days&apos;, Due_Time__c, Due_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration(In Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Activity Plan Item</label>
    <nameField>
        <displayFormat>AP-{0000}</displayFormat>
        <label>Activity Plan Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Plan Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>